# Production_DocAgent

./: .env.example  .gitignore  PROJECT_NOTES.md  README.md  pyproject.toml
deploy/: .env.production.example  Caddyfile  it-docbuilder.service
src/it_doc_builder/: api.py  cli.py  config.py  document_types.py  models.py
src/it_doc_builder/clients/: deepseek.py
src/it_doc_builder/services/: auth.py  document_store.py  docx_exporter.py  email_service.py  logo_store.py  pipeline.py  runtime_settings.py
styles/: report-azure.css  report-security.css  report.css
templates/: accept_invite.html.j2  account.html.j2  history.html.j2  index.html.j2  login.html.j2  report.html.j2  reset_password.html.j2  settings.html.j2  tracking_code_help.html.j2
