[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "it-doc-builder"
version = "0.1.0"
description = "Generate styled IT documentation from raw notes with DeepSeek and export to DOCX."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt<5",
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "html2docx>=1.6.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
it-doc-builder = "it_doc_builder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]